// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolve-product contract > merges selected color data into collection product without breaking base contract fields 1`] = `
{
  "afterName": "0301 LOUISE",
  "afterShortDescription": "Mipolam Accord - LOUISE",
  "beforeName": "Mipolam Accord",
  "documentCount": 14,
  "hasFormatSpec": true,
  "hasThicknessSpec": true,
  "imageUrl": "https://nnjmrfwepylrheykalik.supabase.co/storage/v1/object/public/product-images/products/vinil/mipolam-accord/decor/0301-louise.jpg",
  "selectedColorSlug": "mipolam-accord-0301-louise",
  "specCount": 17,
  "specSample": [
    {
      "key": "tip",
      "label": "Tip",
      "value": "Homogeni vinil",
    },
    {
      "key": "format",
      "label": "Format",
      "value": "Rolna",
    },
    {
      "key": "ukupna_debljina",
      "label": "Ukupna debljina",
      "value": "2.0 mm",
    },
    {
      "key": "sloj_habanja",
      "label": "Sloj habanja",
      "value": "Kroz celu debljinu",
    },
    {
      "key": "površinska_obrada",
      "label": "Površinska obrada",
      "value": "Evercare™",
    },
    {
      "key": "klasa_upotrebe",
      "label": "Klasa upotrebe",
      "value": "Klasa 34/43",
    },
    {
      "key": "vatrostojnost",
      "label": "Vatrostojnost",
      "value": "Bfl-s1",
    },
    {
      "key": "tip_instalacije",
      "label": "Tip instalacije",
      "value": "Lepljenje",
    },
  ],
}
`;

exports[`resolve-product contract > merges selected-color documents into the server product contract when the color has richer docs than the collection 1`] = `
{
  "collectionSlug": "tarkett-bold",
  "documentCount": 2,
  "documents": [
    {
      "title": "Tehnički list",
      "url": "https://www.tarkett.rs/sr_RS/pdf/collection-C002929-bold/mist-1/specifications",
    },
    {
      "title": "Tabela formata",
      "url": "https://www.tarkett.rs/sr_RS/pdf/collection-C002929-bold/mist-1/format-table",
    },
  ],
  "selectedColorSlug": "tarkett-bold-color-mist-1",
}
`;

exports[`resolve-product contract > resolves a lajsne collection slug into stable product contract 1`] = `
{
  "brandId": "3",
  "categoryId": "11",
  "collectionSlug": null,
  "detailsSectionCount": 1,
  "documentCount": 4,
  "hasPrimaryImage": true,
  "id": "tarkett-lajsne-tarkett-dekorativne-zidne-lajsne-za-lvt",
  "name": "Dekorativne zidne lajsne za LVT",
  "primaryImageUrl": "https://nnjmrfwepylrheykalik.supabase.co/storage/v1/object/public/product-images/products/lajsne/tarkett-dekorativne-zidne-lajsne-za-lvt/collection.jpg",
  "shortDescription": "Dekorativne lajsne za LVT su kompaktne PVC zidne lajsne sa dekorativnim slojem i PUR tretmanom čime se postiže visoka otpornost na abraziju.",
  "slug": "tarkett-dekorativne-zidne-lajsne-za-lvt",
  "specCount": 14,
  "specSample": [
    {
      "key": "collection",
      "label": "Kolekcija",
      "value": "Dekorativne zidne lajsne za LVT",
    },
    {
      "key": "tip_proizvoda",
      "label": "Tip proizvoda",
      "value": "Wall base",
    },
    {
      "key": "profil",
      "label": "Profil",
      "value": "Lajsne LVT 60x10",
    },
    {
      "key": "format",
      "label": "Format",
      "value": "Skirting 1,95m",
    },
    {
      "key": "ukupna_debljina",
      "label": "Ukupna debljina",
      "value": "10 mm",
    },
    {
      "key": "visina",
      "label": "Visina",
      "value": "60 mm",
    },
    {
      "key": "duzina",
      "label": "Dužina",
      "value": "195 cm",
    },
    {
      "key": "komada_u_pakovanju",
      "label": "Komada u pakovanju",
      "value": "5",
    },
  ],
}
`;

exports[`resolve-product contract > resolves a vinyl collection slug into stable product contract 1`] = `
{
  "brandId": "6",
  "categoryId": "2",
  "collectionSlug": null,
  "detailsSectionCount": 0,
  "documentCount": 14,
  "hasPrimaryImage": true,
  "id": "vinyl-coll-mipolam-accord",
  "name": "Mipolam Accord",
  "primaryImageUrl": "https://nnjmrfwepylrheykalik.supabase.co/storage/v1/object/public/product-images/products/vinil/mipolam-accord/ambience/scena-1.jpg",
  "shortDescription": "Mipolam Accord — 22 boja",
  "slug": "gerflor-mipolam-accord",
  "specCount": 8,
  "specSample": [
    {
      "key": "tip",
      "label": "Tip",
      "value": "Homogeni vinil",
    },
    {
      "key": "format",
      "label": "Format",
      "value": "Rolna",
    },
    {
      "key": "ukupna_debljina",
      "label": "Ukupna debljina",
      "value": "2.0 mm",
    },
    {
      "key": "sloj_habanja",
      "label": "Sloj habanja",
      "value": "Kroz celu debljinu",
    },
    {
      "key": "površinska_obrada",
      "label": "Površinska obrada",
      "value": "Evercare™",
    },
    {
      "key": "klasa_upotrebe",
      "label": "Klasa upotrebe",
      "value": "Klasa 34/43",
    },
    {
      "key": "vatrostojnost",
      "label": "Vatrostojnost",
      "value": "Bfl-s1",
    },
    {
      "key": "tip_instalacije",
      "label": "Tip instalacije",
      "value": "Lepljenje",
    },
  ],
}
`;
